--- a/app/src/main/res/layout/camera_preview_layout.xml
+++ b/app/src/main/res/layout/camera_preview_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -10,19 +10,6 @@
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <VideoView
-        android:id="@+id/sv_video_play"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
-
-    <ImageView
-        android:id="@+id/iv_home_back"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/rl_root_supernatant"
@@ -51,9 +38,9 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="11.5dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginTop="11.5dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="11.5dp"
                 android:background="@drawable/bn_camera_capture_light_selector"
                 android:button="@null"
                 android:checked="false"
@@ -64,9 +51,9 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
-                android:layout_marginBottom="11.5dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="11.5dp"
+                android:layout_marginBottom="11.5dp"
                 android:gravity="center"
                 android:scaleType="center"
                 android:src="@drawable/rectangle_camera" />
@@ -99,13 +86,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="96dp"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="96dp"
             android:gravity="bottom"
-            android:orientation="vertical">
+            android:orientation="vertical" />
 
-
-        </LinearLayout>
+        <ProgressBar
+            android:id="@+id/sv_video_play"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
